// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with all fields 1`] = `
<div
  class="container"
>
  <div
    class="overlay small"
  >
    <section
      class="content"
    >
      <header>
        <h2>
          Test
        </h2>
        <span
          aria-label="su-times"
          class="icon su-times clickable"
          role="button"
          tabindex="0"
        />
      </header>
      <article>
        <div
          class="content"
        >
          <section
            class="section"
          >
            <h3>
              sulu_admin.data_source
            </h3>
            <div
              class="source"
            >
              <button
                class="button secondary sourceButton"
                type="button"
              >
                <span
                  class="text"
                >
                  sulu_admin.choose_data_source
                </span>
              </button>
              <label
                class="label"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    type="checkbox"
                    value=""
                  />
                  <span />
                </span>
                <div>
                  sulu_admin.include_sub_elements
                </div>
              </label>
            </div>
            <label
              class="description"
            >
              sulu_admin.data_source: 
            </label>
          </section>
          <section
            class="section"
          >
            <h3>
              sulu_admin.filter_by_categories
            </h3>
            <div
              class="categories"
            >
              <button
                class="button secondary"
                type="button"
              >
                <span
                  class="text"
                >
                  sulu_admin.choose_categories
                </span>
              </button>
              <div
                class="categoriesSelect"
              >
                <div
                  class="select"
                >
                  <button
                    class="displayValue"
                    type="button"
                  >
                    <div
                      aria-label="sulu_admin.any_category_description"
                      class="croppedText"
                      title="sulu_admin.any_category_description"
                    >
                      <div
                        aria-hidden="true"
                        class="front"
                      >
                        sulu_admin.any_cat
                      </div>
                      <div
                        aria-hidden="true"
                        class="back"
                      >
                        <span>
                          egory_description
                        </span>
                      </div>
                      <div
                        class="whole"
                      >
                        sulu_admin.any_category_description
                      </div>
                    </div>
                    <span
                      aria-label="su-angle-down"
                      class="toggle su-angle-down"
                    />
                  </button>
                </div>
              </div>
            </div>
            <label
              class="description"
            >
              sulu_category.categories: 
            </label>
          </section>
          <section
            class="section"
          >
            <h3>
              sulu_admin.filter_by_tags
            </h3>
            <div
              class="tags"
            >
              <div
                class="tagsAutoComplete"
              />
              <div
                class="tagsSelect"
              >
                <div
                  class="select"
                >
                  <button
                    class="displayValue"
                    type="button"
                  >
                    <div
                      aria-label="sulu_admin.any_tag_description"
                      class="croppedText"
                      title="sulu_admin.any_tag_description"
                    >
                      <div
                        aria-hidden="true"
                        class="front"
                      >
                        sulu_admin.any_
                      </div>
                      <div
                        aria-hidden="true"
                        class="back"
                      >
                        <span>
                          tag_description
                        </span>
                      </div>
                      <div
                        class="whole"
                      >
                        sulu_admin.any_tag_description
                      </div>
                    </div>
                    <span
                      aria-label="su-angle-down"
                      class="toggle su-angle-down"
                    />
                  </button>
                </div>
              </div>
            </div>
          </section>
          <section
            class="section"
          >
            <h3>
              sulu_admin.target_groups
            </h3>
            <label
              class="label"
            >
              <span
                class="switch checkbox dark"
              >
                <input
                  type="checkbox"
                  value=""
                />
                <span />
              </span>
              <div>
                sulu_admin.use_target_groups
              </div>
            </label>
          </section>
          <section
            class="section"
          >
            <h3>
              sulu_admin.sort_by
            </h3>
            <div
              class="sorting"
            >
              <div
                class="sortColumn"
              >
                <div
                  class="select"
                >
                  <button
                    class="displayValue"
                    type="button"
                  >
                    <span
                      aria-label="su-angle-down"
                      class="toggle su-angle-down"
                    />
                  </button>
                </div>
              </div>
              <div
                class="sortOrder"
              >
                <div
                  class="select"
                >
                  <button
                    class="displayValue"
                    type="button"
                  >
                    <div
                      aria-label="sulu_admin.ascending"
                      class="croppedText"
                      title="sulu_admin.ascending"
                    >
                      <div
                        aria-hidden="true"
                        class="front"
                      >
                        sulu_admin
                      </div>
                      <div
                        aria-hidden="true"
                        class="back"
                      >
                        <span>
                          .ascending
                        </span>
                      </div>
                      <div
                        class="whole"
                      >
                        sulu_admin.ascending
                      </div>
                    </div>
                    <span
                      aria-label="su-angle-down"
                      class="toggle su-angle-down"
                    />
                  </button>
                </div>
              </div>
            </div>
          </section>
          <section
            class="section"
          >
            <h3>
              sulu_admin.present_as
            </h3>
            <div
              class="presentation"
            >
              <div
                class="select"
              >
                <button
                  class="displayValue"
                  type="button"
                >
                  <span
                    aria-label="su-angle-down"
                    class="toggle su-angle-down"
                  />
                </button>
              </div>
            </div>
          </section>
          <section
            class="section"
          >
            <h3>
              sulu_admin.limit_result_to
            </h3>
            <div
              class="limit"
            >
              <label
                class="input default"
              >
                <input
                  type="number"
                  value=""
                />
              </label>
            </div>
          </section>
        </div>
      </article>
      <footer>
        <div
          class="actions"
        >
          <button
            class="button link"
            type="button"
          >
            <span
              class="text"
            >
              sulu_admin.reset
            </span>
          </button>
        </div>
        <button
          class="button primary"
          type="button"
        >
          <span
            class="text"
          >
            sulu_admin.confirm
          </span>
        </button>
      </footer>
    </section>
  </div>
</div>
`;

exports[`Render with no fields 1`] = `
<div
  class="container"
>
  <div
    class="overlay small"
  >
    <section
      class="content"
    >
      <header>
        <h2>
          Test
        </h2>
        <span
          aria-label="su-times"
          class="icon su-times clickable"
          role="button"
          tabindex="0"
        />
      </header>
      <article>
        <div
          class="content"
        />
      </article>
      <footer>
        <div
          class="actions"
        >
          <button
            class="button link"
            type="button"
          >
            <span
              class="text"
            >
              sulu_admin.reset
            </span>
          </button>
        </div>
        <button
          class="button primary"
          type="button"
        >
          <span
            class="text"
          >
            sulu_admin.confirm
          </span>
        </button>
      </footer>
    </section>
  </div>
</div>
`;
